--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<!-- Facebook Open Graph data -->
 	    <meta property="og:title" content="Merisia" />
 	    <meta property="og:type" content="website" />
-	    <meta property="og:url" content="#" />
+	    <meta property="og:url" content="https://laurelinepriou.github.io/merisia/index.html" />
 	    <meta property="og:image" content="images/banner.jpg" />
 	    <meta property="og:description" content="Hello there! Welcome on my website, enjoy!" />
 	    <meta property="og:site_name" content="Merisia" />
