--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 		<link rel="icon" type="image/png" href="#">
 
+		<meta name="description" content="Young pie, making design and marketing studies.">
+
 		<!-- Facebook Open Graph data -->
 	    <meta property="og:title" content="Merisia" />
 	    <meta property="og:type" content="website" />
